tests/asm/valid/tab_at_end_of_file.s
.name "zork"
.comment "I'M ALIIIIVE"

#there is tab at the end of file, 
#r_asm consider it as newline
#our_asm says it has no newline


lele:

lex:

live	%1

	
	