tests/asm/error/label_error_3.s
.name "zork"
.comment "I'M ]ALIIIIVE"


#le_12:9rwrjqwkrj2io4u2184892849218490218490218904 should be error

le_12:9rwrjqwkrj2io4u2184892849218490218490218904

live	%1

liv: live %1
	
